chore: regenerate swagger
