# pkg/api/handlers/health.go
@@ -10,13 +10,14 @@ import (
 type HealthHandler struct{}
 
 // ShowAccount godoc
-// @Summary      Get health
-// @Description  Get health
-// @Tags         health
-// @Accept       json
-// @Produce      json
-// @Success      200  {object}  entities.Response
-// @Router       /health [get]
+//
+//	@Summary		Get health
+//	@Description	Get health
+//	@Tags			health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	entities.Response
+//	@Router			/health [get]
 func (h *HealthHandler) GetHealth(c *gin.Context) {
 	c.JSON(http.StatusOK, entities.Response{
 		Status:  http.StatusOK,
